kubernetes/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: default
spec:
  ports:
    - port: 3001
      targetPort: 3001
      name: http
  selector:
    app: api
  type: ClusterIP
